[gd_scene load_steps=37 format=2]

[ext_resource path="res://Src/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/MagoFont3_32_outline.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/HUD/Dialog9PatchInner.png" type="Texture" id=3]
[ext_resource path="res://Src/HUD/GUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Src/HUD/UpgradeButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/SFX/paper.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/HUD/Dialog9Patch.png" type="Texture" id=7]
[ext_resource path="res://Assets/HUD/Note.png" type="Texture" id=8]
[ext_resource path="res://Shaders/Crt-Shader.tres" type="Material" id=9]
[ext_resource path="res://Assets/Fonts/MenuFontPassive.tres" type="DynamicFont" id=10]
[ext_resource path="res://Assets/SFX/hint.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/SFX/type2.wav" type="AudioStream" id=12]
[ext_resource path="res://Src/HUD/MissionBriefing.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/Fonts/MagoFont3_16_outline.tres" type="DynamicFont" id=14]
[ext_resource path="res://Assets/Fonts/MagoFont3_16.tres" type="DynamicFont" id=15]
[ext_resource path="res://Src/BaseButton/BaseButton.tscn" type="PackedScene" id=16]
[ext_resource path="res://Src/HUD/Dialog.gd" type="Script" id=21]
[ext_resource path="res://Src/Menu/Slider.tscn" type="PackedScene" id=22]
[ext_resource path="res://Assets/Portraits/Portraits.png" type="Texture" id=23]
[ext_resource path="res://Assets/HUD/PromoTitle.png" type="Texture" id=24]
[ext_resource path="res://Assets/HUD/PromoSteam.png" type="Texture" id=25]
[ext_resource path="res://Src/HUD/MissionProgress.tscn" type="PackedScene" id=26]
[ext_resource path="res://Assets/HUD/DialogueBg.png" type="Texture" id=27]

[sub_resource type="Animation" id=1]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 128, 128 ), Vector2( 128, 112 ), Vector2( 128, 112 ), Vector2( 128, 96 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="ButtonGroup" id=6]

[sub_resource type="ButtonGroup" id=7]

[sub_resource type="ButtonGroup" id=8]

[sub_resource type="ButtonGroup" id=9]

[sub_resource type="ButtonGroup" id=10]

[sub_resource type="ButtonGroup" id=11]

[sub_resource type="ButtonGroup" id=12]

[sub_resource type="ButtonGroup" id=13]

[node name="HUD" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LevelModulation" type="CanvasModulate" parent="."]
color = Color( 0.768627, 0.811765, 0.839216, 1 )

[node name="HUDLayer" type="CanvasLayer" parent="."]
layer = 20

[node name="Shader" type="ColorRect" parent="HUDLayer"]
material = ExtResource( 9 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="DetectFlash" type="ColorRect" parent="HUDLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.788235, 0.188235, 0.219608, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUDLayer/DetectFlash"]
anims/detection = SubResource( 1 )

[node name="LevelFade" type="ColorRect" parent="HUDLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUDLayer/LevelFade"]
anims/fade_out = SubResource( 2 )

[node name="PhotoFlash" type="ColorRect" parent="HUDLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUDLayer/PhotoFlash"]
anims/detection = SubResource( 3 )

[node name="GameOverNotification" type="Label" parent="HUDLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -28.0
margin_right = 120.0
margin_bottom = 12.0
rect_scale = Vector2( 0.1, 0.1 )
rect_pivot_offset = Vector2( 120, 32 )
custom_fonts/font = ExtResource( 2 )
text = "HUD_GAME_OVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverNotifcationAnimationPlayer" type="AnimationPlayer" parent="HUDLayer/GameOverNotification"]
anims/pop = SubResource( 4 )

[node name="GameHintNotification" type="Label" parent="HUDLayer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -84.0
margin_right = 192.0
margin_bottom = -43.9972
rect_pivot_offset = Vector2( 120, 32 )
custom_fonts/font = ExtResource( 14 )
text = "Example Text Goes Here"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameHintAnimationPlayer" type="AnimationPlayer" parent="HUDLayer/GameHintNotification"]
anims/pop = SubResource( 5 )

[node name="PromoShot" type="Node2D" parent="HUDLayer"]
visible = false

[node name="PromoTitel" type="Sprite" parent="HUDLayer/PromoShot"]
position = Vector2( 320, 320 )
texture = ExtResource( 24 )

[node name="PromoSteam" type="Sprite" parent="HUDLayer/PromoShot"]
position = Vector2( 568, 320 )
texture = ExtResource( 25 )

[node name="Display" type="Control" parent="HUDLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" parent="HUDLayer/Display" instance=ExtResource( 4 )]

[node name="Note" type="TextureRect" parent="HUDLayer/Display"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -56.0
margin_right = 96.0
margin_bottom = 56.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="HUDLayer/Display/Note"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 12.0
margin_right = -16.0
margin_bottom = -12.0
custom_fonts/normal_font = ExtResource( 15 )
custom_colors/default_color = Color( 0.121569, 0.0941176, 0.2, 1 )
bbcode_enabled = true
bbcode_text = "-- Close with ESC --
Lorem Ipsum is simply dummy text of ..."
text = "-- Close with ESC --
Lorem Ipsum is simply dummy text of ..."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUDLayer/Display/Note"]
margin_left = -72.0
margin_top = 117.0
margin_right = 264.0
margin_bottom = 133.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.541176, 0.313726, 0.243137, 1 )
text = "HUD_CLOSE_NOTIFICATION"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrades" type="NinePatchRect" parent="HUDLayer/Display"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -100.0
margin_right = 88.0
margin_bottom = 100.0
texture = ExtResource( 7 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUDLayer/Display/Upgrades"]
margin_left = -80.0
margin_top = 200.0
margin_right = 256.0
margin_bottom = 216.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.541176, 0.313726, 0.243137, 1 )
text = "HUD_CLOSE_NOTIFICATION"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="HUDLayer/Display/Upgrades"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -7.0
margin_bottom = -92.0
rect_min_size = Vector2( 32, 32 )
custom_constants/vseparation = 11
custom_constants/hseparation = 11
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeButton0" parent="HUDLayer/Display/Upgrades/Grid" instance=ExtResource( 5 )]
group = SubResource( 6 )

[node name="UpgradeButton1" parent="HUDLayer/Display/Upgrades/Grid" instance=ExtResource( 5 )]
margin_left = 43.0
margin_right = 75.0
group = SubResource( 7 )
skill = 1

[node name="UpgradeButton2" parent="HUDLayer/Display/Upgrades/Grid" instance=ExtResource( 5 )]
margin_left = 86.0
margin_right = 118.0
group = SubResource( 8 )
skill = 2

[node name="UpgradeButton3" parent="HUDLayer/Display/Upgrades/Grid" instance=ExtResource( 5 )]
margin_left = 129.0
margin_right = 161.0
group = SubResource( 9 )
skill = 3

[node name="UpgradeButton4" parent="HUDLayer/Display/Upgrades/Grid" instance=ExtResource( 5 )]
margin_top = 43.0
margin_bottom = 75.0
group = SubResource( 10 )
skill = 4

[node name="UpgradeButton5" parent="HUDLayer/Display/Upgrades/Grid" instance=ExtResource( 5 )]
margin_left = 43.0
margin_top = 43.0
margin_right = 75.0
margin_bottom = 75.0
group = SubResource( 11 )
skill = 5

[node name="UpgradeButton6" parent="HUDLayer/Display/Upgrades/Grid" instance=ExtResource( 5 )]
margin_left = 86.0
margin_top = 43.0
margin_right = 118.0
margin_bottom = 75.0
group = SubResource( 12 )
skill = 6

[node name="UpgradeButton7" parent="HUDLayer/Display/Upgrades/Grid" instance=ExtResource( 5 )]
margin_left = 129.0
margin_top = 43.0
margin_right = 161.0
margin_bottom = 75.0
group = SubResource( 13 )
skill = 7

[node name="InfoBox" type="NinePatchRect" parent="HUDLayer/Display/Upgrades"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 88.0
margin_right = -8.0
margin_bottom = -8.0
texture = ExtResource( 7 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Titel" type="Label" parent="HUDLayer/Display/Upgrades/InfoBox"]
margin_left = 8.0
margin_top = 4.0
margin_right = 152.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 10 )
text = "Titel"

[node name="Description" type="RichTextLabel" parent="HUDLayer/Display/Upgrades/InfoBox"]
margin_left = 8.0
margin_top = 18.0
margin_right = 152.0
margin_bottom = 80.0
custom_fonts/normal_font = ExtResource( 14 )
bbcode_enabled = true
bbcode_text = "Increases the battery capacity to allow taser usages."
text = "Increases the battery capacity to allow taser usages."

[node name="UpgradeButton" parent="HUDLayer/Display/Upgrades/InfoBox" instance=ExtResource( 16 )]
margin_left = 16.0
margin_top = 72.0
margin_right = 144.0
margin_bottom = 96.0
text = "HUD_BUY_UPGRADE"

[node name="SaveGame" type="Control" parent="HUDLayer/Display"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="NinePatchRect" parent="HUDLayer/Display/SaveGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -84.0
margin_right = 144.0
margin_bottom = 76.0
focus_neighbour_left = NodePath("ButtonReturn")
focus_neighbour_top = NodePath("ButtonSave3")
focus_neighbour_right = NodePath("ButtonSave3")
focus_neighbour_bottom = NodePath("ButtonReturn")
focus_next = NodePath("ButtonReturn")
focus_previous = NodePath("ButtonSave3")
focus_mode = 2
texture = ExtResource( 7 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSave1" parent="HUDLayer/Display/SaveGame/Menu" instance=ExtResource( 16 )]
margin_left = 8.0
margin_top = 32.0
margin_right = 136.0
margin_bottom = 56.0
text = "Slot 1"

[node name="ButtonSave2" parent="HUDLayer/Display/SaveGame/Menu" instance=ExtResource( 16 )]
margin_left = 8.0
margin_top = 64.0
margin_right = 136.0
margin_bottom = 88.0
text = "Slot 2"

[node name="ButtonSave3" parent="HUDLayer/Display/SaveGame/Menu" instance=ExtResource( 16 )]
margin_left = 8.0
margin_top = 96.0
margin_right = 136.0
margin_bottom = 120.0
text = "Slot 3"

[node name="ButtonReturn" parent="HUDLayer/Display/SaveGame/Menu" instance=ExtResource( 16 )]
margin_left = 8.0
margin_top = 128.0
margin_right = 136.0
margin_bottom = 152.0
text = "SETTINGS_BACK"

[node name="ButtonSave" parent="HUDLayer/Display/SaveGame/Menu" instance=ExtResource( 16 )]
margin_left = 152.0
margin_top = 128.0
margin_right = 280.0
margin_bottom = 152.0
text = "HUD_SAVE"

[node name="Label" type="Label" parent="HUDLayer/Display/SaveGame/Menu"]
margin_left = 9.0
margin_top = 10.0
margin_right = 272.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 10 )
text = "HUD_SAVE_GAME"

[node name="Menu" type="NinePatchRect" parent="HUDLayer/Display/SaveGame/Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 9.0
margin_top = -47.0
margin_right = 135.0
margin_bottom = 39.0
focus_neighbour_left = NodePath("ButtonReturn")
focus_neighbour_top = NodePath("ButtonSave3")
focus_neighbour_right = NodePath("ButtonSave3")
focus_neighbour_bottom = NodePath("ButtonReturn")
focus_next = NodePath("ButtonReturn")
focus_previous = NodePath("ButtonSave3")
focus_mode = 2
texture = ExtResource( 3 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveText" type="RichTextLabel" parent="HUDLayer/Display/SaveGame/Menu"]
margin_left = 158.0
margin_top = 37.0
margin_right = 272.0
margin_bottom = 112.0
custom_fonts/normal_font = ExtResource( 14 )
text = "Slot: -

Date: -
Level: -"

[node name="Dialog" type="Control" parent="HUDLayer/Display"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -296.0
margin_right = 192.0
margin_bottom = -208.0
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="HUDLayer/Display/Dialog"]
texture = ExtResource( 27 )
centered = false

[node name="Text" type="RichTextLabel" parent="HUDLayer/Display/Dialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 4.0
custom_fonts/normal_font = ExtResource( 14 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
bbcode_enabled = true
bbcode_text = "Text: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever."
text = "Text: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueTypeTimer" type="Timer" parent="HUDLayer/Display/Dialog"]
wait_time = 0.03

[node name="vbox" type="VBoxContainer" parent="HUDLayer/Display/Dialog"]
margin_left = 64.0
margin_top = 128.0
margin_right = 192.0
margin_bottom = 236.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoBranchButton" parent="HUDLayer/Display/Dialog/vbox" instance=ExtResource( 16 )]
text = "Ok"

[node name="Option0Button" parent="HUDLayer/Display/Dialog/vbox" instance=ExtResource( 16 )]
margin_top = 28.0
margin_bottom = 52.0
focus_neighbour_left = NodePath("../Option2Button")
focus_neighbour_right = NodePath("../Option1Button")

[node name="Option1Button" parent="HUDLayer/Display/Dialog/vbox" instance=ExtResource( 16 )]
margin_top = 56.0
margin_bottom = 80.0
focus_neighbour_left = NodePath("../Option0Button")
focus_neighbour_right = NodePath("../Option2Button")

[node name="Option2Button" parent="HUDLayer/Display/Dialog/vbox" instance=ExtResource( 16 )]
margin_top = 84.0
margin_bottom = 108.0
focus_neighbour_left = NodePath("../Option1Button")
focus_neighbour_right = NodePath("../Option0Button")

[node name="Sprite" type="Sprite" parent="HUDLayer/Display/Dialog"]
position = Vector2( -40, 24 )
texture = ExtResource( 23 )
hframes = 4

[node name="IngameMenu" type="Control" parent="HUDLayer/Display"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DarkerBG" type="ColorRect" parent="HUDLayer/Display/IngameMenu"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.623529 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="NinePatchRect" parent="HUDLayer/Display/IngameMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -96.0
margin_right = 80.0
margin_bottom = 76.0
texture = ExtResource( 7 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonReturn" parent="HUDLayer/Display/IngameMenu/Menu" instance=ExtResource( 16 )]
margin_left = 16.0
margin_top = 12.0
margin_right = 144.0
margin_bottom = 36.0
text = "INGAME_CONTINUE"

[node name="ButtonRestart" parent="HUDLayer/Display/IngameMenu/Menu" instance=ExtResource( 16 )]
margin_left = 16.0
margin_top = 41.0
margin_right = 144.0
margin_bottom = 65.0
text = "INGAME_RESTART"

[node name="ButtonQuit" parent="HUDLayer/Display/IngameMenu/Menu" instance=ExtResource( 16 )]
margin_left = 16.0
margin_top = 138.0
margin_right = 144.0
margin_bottom = 162.0
text = "INGAME_QUIT"

[node name="MusicSlider" parent="HUDLayer/Display/IngameMenu/Menu" instance=ExtResource( 22 )]
margin_left = 16.0
margin_top = 112.0
margin_right = 112.0
margin_bottom = 136.0

[node name="Label" type="Label" parent="HUDLayer/Display/IngameMenu/Menu/MusicSlider"]
margin_top = -8.0
margin_right = 40.0
margin_bottom = 6.0
custom_fonts/font = ExtResource( 10 )
text = "SETTINGS_MUSIC"

[node name="SoundSlider" parent="HUDLayer/Display/IngameMenu/Menu" instance=ExtResource( 22 )]
margin_left = 16.0
margin_top = 77.0
margin_right = 112.0
margin_bottom = 101.0

[node name="Label" type="Label" parent="HUDLayer/Display/IngameMenu/Menu/SoundSlider"]
margin_top = -8.0
margin_right = 40.0
margin_bottom = 6.0
custom_fonts/font = ExtResource( 10 )
text = "SETTINGS_SOUND"

[node name="DebugPromo" type="Button" parent="HUDLayer/Display/IngameMenu"]
visible = false
margin_left = 272.0
margin_top = 56.0
margin_right = 371.0
margin_bottom = 76.0
text = "Toggle Promo"

[node name="MissionProgress" parent="HUDLayer/Display" instance=ExtResource( 26 )]
visible = false

[node name="MissionBriefing" parent="HUDLayer/Display" instance=ExtResource( 13 )]
visible = false

[node name="StartMissionButton" parent="HUDLayer/Display/MissionBriefing" instance=ExtResource( 16 )]
margin_left = 256.0
margin_top = 328.0
margin_right = 384.0
margin_bottom = 352.0
text = "Lets Go"

[node name="GameHint" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "Sound"

[node name="NoteOpen" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Sound"

[node name="Type" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -10.0
bus = "Sound"

[connection signal="animation_finished" from="HUDLayer/GameOverNotification/GameOverNotifcationAnimationPlayer" to="." method="_on_GameOverNotifcationAnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="HUDLayer/GameHintNotification/GameHintAnimationPlayer" to="." method="_on_GameHintAnimationPlayer_animation_finished"]
[connection signal="button_up" from="HUDLayer/Display/Upgrades/InfoBox/UpgradeButton" to="." method="_on_UpgradeButton_button_up"]
[connection signal="button_up" from="HUDLayer/Display/SaveGame/Menu/ButtonSave1" to="." method="_on_ButtonSave1_button_up"]
[connection signal="button_up" from="HUDLayer/Display/SaveGame/Menu/ButtonSave2" to="." method="_on_ButtonSave2_button_up"]
[connection signal="button_up" from="HUDLayer/Display/SaveGame/Menu/ButtonSave3" to="." method="_on_ButtonSave3_button_up"]
[connection signal="button_up" from="HUDLayer/Display/SaveGame/Menu/ButtonReturn" to="." method="_on_ButtonReturn_button_up"]
[connection signal="button_up" from="HUDLayer/Display/SaveGame/Menu/ButtonSave" to="." method="_on_ButtonSave_button_up"]
[connection signal="button_up" from="HUDLayer/Display/IngameMenu/Menu/ButtonReturn" to="." method="_on_ButtonReturn_button_up"]
[connection signal="button_up" from="HUDLayer/Display/IngameMenu/Menu/ButtonRestart" to="." method="_on_ButtonRestart_button_up"]
[connection signal="button_up" from="HUDLayer/Display/IngameMenu/Menu/ButtonQuit" to="." method="_on_ButtonQuit_button_up"]
[connection signal="value_changed" from="HUDLayer/Display/IngameMenu/Menu/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="HUDLayer/Display/IngameMenu/Menu/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="button_up" from="HUDLayer/Display/IngameMenu/DebugPromo" to="." method="_on_DebugPromo_button_up"]
[connection signal="button_up" from="HUDLayer/Display/MissionBriefing/StartMissionButton" to="." method="_on_StartMissionButton_button_up"]
